[gd_scene load_steps=5 format=3 uid="uid://jjxoyu5hhwgl"]

[ext_resource type="Script" path="res://Scenes/UI/level_select.gd" id="1_dftu1"]
[ext_resource type="Theme" uid="uid://bkipgqa3ph74w" path="res://text_theme.tres" id="2_pgg0b"]

[sub_resource type="Gradient" id="Gradient_440cu"]
offsets = PackedFloat32Array(0, 0.525114, 1)
colors = PackedColorArray(0.743299, 0.461133, 0.10573, 1, 0, 0, 0, 1, 0.39125, 0.815155, 0.145373, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d7ck7"]
gradient = SubResource("Gradient_440cu")

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dftu1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 328.0
offset_bottom = 184.0
texture = SubResource("GradientTexture2D_d7ck7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -68.0
offset_right = 31.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pgg0b")
text = "Level 1"

[node name="Level2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pgg0b")
text = "Level 2"

[node name="Level3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pgg0b")
text = "Level 3"

[node name="Level4Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pgg0b")
text = "Level 4"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pgg0b")
text = "Back To Main Menu?"

[connection signal="pressed" from="VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
